
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2003-03-06 DP  1.6.3  Remember the server's SSL mode property correctly.
2007-03-05 DP  1.6.3  Prevent the RULE privilege becoming re-enabled for tables
                      on PostgreSQL 8.2+, per Erwin.
2007-03-05 DP  1.6.3  Minor fix for edb/spl functions.
2007-03-02 DP  1.6.3  Fix procedure support on EnterpriseDB AS81.
2007-02-23 DP  1.6.3  Fix a rare bug in the Edit Grid which could cause a crash
                      when editting data in tables with deleted columns and a
                      primary key that isn;t at the beginning of the table.
                      Thanks to Patrick De Visschere for the test case.
2007-02-23 DP  1.6.3  Use the correct version of the Slony scripts when
                      creating a new cluster, per Duncan Beeby.
2007-02-22 DP  1.6.3  Prevent the Edit Grid Filter causing a crash if an
                      invalid filter containing a % is used, per Erwin.
2007-02-16 DP  1.6.3  Fix a minor bug in app bundle creation for Mac [Florian
                      G. Pflug]
2007-02-05 DP  1.6.3  Fix the graphical explain to properly display backwards
                      index scan nodes, per Brendan O'Shea.
2007-02-05 DP  1.6.3  Fix default perspective names, per Ezequias
2007-02-05 DP  1.6.3  Monitor the streams again whilst backing up on Mac -
                      this no longer crashesin wx2.8. Per Dave Livesay.
2007-02-05 DP  1.6.3  Fix a crash on Mac that occurred when using some combo
                      boxes, per David Lowry.
2007-01-29 DP  1.6.3  Fix menu icon for Gnome [Nathan Egge]
2007-01-26 DP  1.6.3  Allow users with SUPERUSER but no other privilege flags